# Adaptive-AUTOSAR-Functional-Cluster-Cryptography

./: CMakeLists.txt  Crypo_Classes.txt  FindCrypto++.cmake  README.md  SHA_256.cpp  aes_cbc.cpp  example_result.cpp  hashctx.cpp  main.cpp
CryptoPP_examples/: AES_CBC_128.cpp  AES_ECB_128.cpp  CMakeLists.txt  ECDSA_PUK_PRK_generation.cpp  ESDSA.cpp  PUK_PRK_generation.cpp  RAS_2048.cpp  RSA_PUK_PRK_generation.cpp  SHA_256.cpp  SemiAutosar_SHA_256.cpp  hmac_sha256.cpp  saveKey.h
Demos/: demo_2_key_storage_with_ecdsa.cpp  demo_aes.cpp  demo_ecdsa.cpp  demo_generatingECDSAKeys.cpp  demo_hash.cpp  demo_hmac.cpp  demo_loadingECDSAKeys.cpp  demo_rsa.cpp
ara/core/: SamplePtr.h  Span.h  StringView.h  error_code.h  error_domain.h  exception.h  initialization.cpp  initialization.h  instance_id.cpp  instance_id.h  instance_specifier.cpp  instance_specifier.h  result.h  string.h  utility.h  vector.h
ara/crypto/Manifest/: CryptoKeySlotInterface.h  manifest.json  manifestOperations.cpp  manifestOperations.h  sharedSlotsInterface.cpp  sharedSlotsInterface.h
ara/crypto/helper/: print.cpp  print.h  state.h
ara/crypto/private/common/: base_id_types.h  crypto_error_domain.h  crypto_object_uid.h  entry_point.cpp  entry_point.h  io_interface.h  mem_region.h  uuid.h
ara/crypto/private/cryp/: crypto_context.h  crypto_provider.h  decryptor_private_ctx.h  encryptor_public_ctx.h  hash_function_ctx.h  message_authn_code_ctx.h  msg_recovery_public_ctx.h  sig_encode_private_ctx.h  symmetric_block_cipher_ctx.h
ara/crypto/private/cryp/cryobj/: crypto_object.h  crypto_primitive_id.h  private_key.h  public_key.h  restricted_use_object.h  signature.h  symmetric_key.h
ara/crypto/private/keys/: elementary_types.h  key_slot_content_props.h  key_slot_prototype_props.h  key_storage_provider.h  keyslot.h
ara/crypto/public/common/: file_io_interface.h
ara/crypto/public/cryp/: cryptopp_aes_ecb_128_symmetric_block_cipher_ctx.cpp  cryptopp_aes_ecb_128_symmetric_block_cipher_ctx.h  cryptopp_aes_symmetric_block_cipher_ctx.cpp  cryptopp_aes_symmetric_block_cipher_ctx.h  cryptopp_crypto_context.h  cryptopp_crypto_provider.cpp  cryptopp_crypto_provider.h  cryptopp_ecdsa_msg_recovery_public_ctx.cpp  cryptopp_ecdsa_msg_recovery_public_ctx.h  cryptopp_ecdsa_sha_256_msg_recovery_public_ctx.cpp  cryptopp_ecdsa_sha_256_msg_recovery_public_ctx.h  cryptopp_ecdsa_sha_256_sig_encode_private_ctx.cpp  cryptopp_ecdsa_sha_256_sig_encode_private_ctx.h  cryptopp_ecdsa_sig_encode_private_ctx.cpp  cryptopp_ecdsa_sig_encode_private_ctx.h  cryptopp_hash_function_ctx.cpp  cryptopp_hash_function_ctx.h  cryptopp_hmac_sha_256_message_authn_code_ctx.cpp  cryptopp_hmac_sha_256_message_authn_code_ctx.h  cryptopp_rsa_2046_decryptor_private_ctx.cpp  cryptopp_rsa_2046_decryptor_private_ctx.h  cryptopp_rsa_2046_encryptor_public_ctx.cpp  cryptopp_rsa_2046_encryptor_public_ctx.h  cryptopp_sha_256_hash_function_ctx.cpp  cryptopp_sha_256_hash_function_ctx.h
ara/crypto/public/cryp/cryobj/: cryptopp_aes_128_symmetric_key.h  cryptopp_aes_symmetric_key.h  cryptopp_crypto_primitive_id.h  cryptopp_ecdsa_private_key.h  cryptopp_ecdsa_public_key.h  cryptopp_ecdsa_sha_256_private_key.h  cryptopp_ecdsa_sha_256_public_key.h  cryptopp_hmac_sha_256_signature.h  cryptopp_hmac_sha_256_symmetric_key.h  cryptopp_rsa_2046_private_key.h  cryptopp_rsa_2046_public_key.h  cryptopp_rsa_private_key.h  cryptopp_rsa_public_key.h  loadKey.h
ara/crypto/public/keys/: cryptopp_key_storage_provider.h  cryptopp_keyslot.h
contexts_samples/: example_aes.cpp  example_ecdsa_contexts.cpp  example_hashctx.cpp  example_hmac_Ctx.cpp  example_rsa_contexts.cpp
samples/: example_hashctx.cpp  example_result.cpp  example_rsa_contexts.cpp  example_span.cpp  example_summetric_block_cipher.cpp  example_uuid.cpp  hashctx.cpp  test.cpp  test2.cpp
